k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: synthesizer
  labels:
    app: synthesizer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: synthesizer
