k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agentra-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: agentra-ip
    networking.gke.io/managed-certificates: agentra-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: agentra-frontend
spec:
  defaultBackend:
    service:
      name: synthesizer
      port:
        number: 80
